added game service
